--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,8 +31,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
          </activity>   
-	 <activity android:name=".GameSurface" android:label="@string/app_name" android:screenOrientation="portrait" />
-  	  	<activity android:name=".About" android:label="@string/app_name" android:screenOrientation="portrait" />				
+	 	<activity android:name=".GameSurface" android:label="@string/app_name" android:screenOrientation="portrait" />
+  	  	<activity android:name=".About" android:label="@string/app_name" android:screenOrientation="portrait" />	
+  	  	<activity android:name=".FullRules" android:label="@string/app_name" android:screenOrientation="portrait" />				
+  		
   		<activity android:name="com.google.ads.AdActivity"
               android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
   		<activity android:name="com.chartboost.sdk.CBImpressionActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:excludeFromRecents="true" />
