--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,9 @@
 	 	<activity android:name=".GameSurface" android:label="@string/app_name" android:screenOrientation="portrait" />
   	  	<activity android:name=".About" android:label="@string/app_name" android:screenOrientation="portrait" />	
   	  	<activity android:name=".FullRules" android:label="@string/app_name" android:screenOrientation="portrait" />				
-  		
+  		  	<activity android:name=".Store" android:label="@string/app_name" android:screenOrientation="portrait" />				
+  	  	
+  	  	
   		<activity android:name="com.google.ads.AdActivity"
               android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
   		<activity android:name="com.chartboost.sdk.CBImpressionActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:excludeFromRecents="true" />
